NativeBOINC: updated changelog

--- a/src/NativeBOINC/res/raw/changelog.txt
+++ b/src/NativeBOINC/res/raw/changelog.txt
@@ -1,3 +1,7 @@
+Version 0.4.4.1.1 (beta) (2013-04-10):
+- updated Czech translations
+- fixed NPE crashes
+
 Version 0.4.4.1 (beta) (2013-04-06):
 - updated english, german and polish translations
 
