--- a/src/NativeBOINC/TODO.txt
+++ b/src/NativeBOINC/TODO.txt
@@ -1,5 +1,5 @@
 ﻿----------------------------------------
-PLANY WERSJI 0.4.4/0.4.5
+PLANY WERSJI 0.4.5/0.4.6
 -----------------------------------------
 
 --- Poprawki
@@ -35,12 +35,14 @@ PLANY WERSJI 0.4.4/0.4.5
   * dodać możliwość instalacji na zewnętrznej pamięci sdcard (/mnt/extSdCard)
 
   * rozszerz zakres informacji bugcatcher:
-    - dodaj czas wykonania, ew. kod aplikacji 
-  * poprawić obsługę libexecwrapper
+    - dodaj czas wykonania, ew. kod aplikacji (kod aplikacji nie ma)
+  * poprawić obsługę libexecwrapper (rozszerzono sprawdzanie katalogu sdcard)
     - sprawdzanie katalogu sdcard (mozliwe nazwy, pobieranie z native boinc poprzez envvar)
+  // istotne
+  * popraw obsługę suspend/resume dla użycia CPU <100% (nie wyświetlaj notyfikacji, istotne)
 
 Klient:
-* poprawic wychodzenie z programu (czasami jest zbyt powolne)
+* poprawic wychodzenie z programu (klienta) (czasami jest zbyt powolne)
 * zbadać dlaczego projekty znikają po aktualizacjach
 * dodac mechanizm pobierania danych o baterii z innego programu
 * poprawić pobieranie info o zasobach aplikacji (ilosc wykorzystanej pamieci i itd) na
