--- a/src/NativeBOINC/res/raw/changelog.txt
+++ b/src/NativeBOINC/res/raw/changelog.txt
@@ -1,3 +1,6 @@
+Version 0.4.4.1.3 (beta) (2013-05-13):
+- properly treats https url in "Enter project URL" dialog in "Select project" screen.
+
 Version 0.4.4.1.2 (beta) (2013-04-22):
 - fixed libexecwrapper (improved sdcard dir detection)
 - added usertime, systime to BugCatcher reports
