--- a/src/NativeBOINC/res/values-de/strings.xml
+++ b/src/NativeBOINC/res/values-de/strings.xml
@@ -142,6 +142,7 @@
 		Haer und eLPeCKo (CNT) - tschechische Übersetzung.\n
 		Daniel Winzen - deutsche Übersetzung.\n
 		Paolo (bax) - italienisch Übersetzung.\n
+		uno20001 - ungarisch Übersetzung.\n 
 	</string>
 
 	<!-- Preferences -->
