--- a/src/NativeBOINC/res/values-it/strings.xml
+++ b/src/NativeBOINC/res/values-it/strings.xml
@@ -130,7 +130,8 @@ Troll81 - per il disegno del logo.\n
 BOINC@Poland - per il supporto.\n
 Haer e eLPeCKo del team CNT - traduzione in ceco.\n
 Daniel Winzen - traduzione in tedesco.\n
-Paolo (bax) - traduzione in italiano.\n</string>
+Paolo (bax) - traduzione in italiano.\n
+uno20001 - traduzione in ungherese.\n</string>
 
     <!-- Preferences -->
     <string name="prefCategoryUI">Interfaccia utente</string>
