--- a/src/NativeBOINC/res/values-pl/strings.xml
+++ b/src/NativeBOINC/res/values-pl/strings.xml
@@ -141,6 +141,7 @@
 		Haer i eLPeCKo (CNT) - tłumaczenie na czeski.\n
 		Daniel Winzen - tłumaczenie na niemiecki.\n
 		Paolo (bax) - tłumaczenie na włoski.\n
+		uno20001 - tłumaczenie na węgierski.\n
 	</string>
 
 	<!-- Preferences -->
