--- a/src/NativeBOINC/res/values/strings.xml
+++ b/src/NativeBOINC/res/values/strings.xml
@@ -142,6 +142,7 @@
 		Haer and eLPeCKo from CNT - czech translation.\n
 		Daniel Winzen - german translation.\n
 		Paolo (bax) - itialan translation.\n
+		uno20001 - hungarian translation.\n
 	</string>
 
 	<!-- Preferences -->
