--- a/src/NativeBOINC/res/values-cs/strings.xml
+++ b/src/NativeBOINC/res/values-cs/strings.xml
@@ -142,6 +142,7 @@
 		Haer a eLPeCKo (CNT) - český překlad.\n
 		Daniel Winzen - německý překlad.\n
 		Paolo (bax) - italský překlad.\n
+		uno20001 - maďarský překlad.\n
 	</string>
 
 	<!-- Preferences -->
