NativeBOINC: fixed NPE in ManageClient activity. Added french translation

--- a/src/NativeBOINC/res/values-de/strings.xml
+++ b/src/NativeBOINC/res/values-de/strings.xml
@@ -143,6 +143,7 @@
 		Daniel Winzen - deutsche Übersetzung.\n
 		Paolo (bax) - italienisch Übersetzung.\n
 		uno20001 - ungarisch Übersetzung.\n 
+		Skwaloo - französisch Übersetzung.\n
 	</string>
 
 	<!-- Preferences -->
