--- a/src/NativeBOINC/res/values-hu/strings.xml
+++ b/src/NativeBOINC/res/values-hu/strings.xml
@@ -143,6 +143,7 @@
 		Daniel Winzen - német fordítás.\n
 		Paolo (bax) - olasz fordítás\n
                 uno20001 - magyar fordítás\n
+        Skwaloo - francia fordítás\n
 	</string>
 
 	<!-- Preferences -->
