--- a/src/NativeBOINC/res/values-it/strings.xml
+++ b/src/NativeBOINC/res/values-it/strings.xml
@@ -131,7 +131,8 @@ BOINC@Poland - per il supporto.\n
 Haer e eLPeCKo del team CNT - traduzione in ceco.\n
 Daniel Winzen - traduzione in tedesco.\n
 Paolo (bax) - traduzione in italiano.\n
-uno20001 - traduzione in ungherese.\n</string>
+uno20001 - traduzione in ungherese.\n
+Skwaloo - traduzione in francese.\n</string>
 
     <!-- Preferences -->
     <string name="prefCategoryUI">Interfaccia utente</string>
