--- a/src/NativeBOINC/res/values-pl/strings.xml
+++ b/src/NativeBOINC/res/values-pl/strings.xml
@@ -142,6 +142,7 @@
 		Daniel Winzen - tłumaczenie na niemiecki.\n
 		Paolo (bax) - tłumaczenie na włoski.\n
 		uno20001 - tłumaczenie na węgierski.\n
+		Skwaloo - tłumaczenie na francuski.\n
 	</string>
 
 	<!-- Preferences -->
