--- a/src/NativeBOINC/res/values/strings.xml
+++ b/src/NativeBOINC/res/values/strings.xml
@@ -143,6 +143,7 @@
 		Daniel Winzen - german translation.\n
 		Paolo (bax) - itialan translation.\n
 		uno20001 - hungarian translation.\n
+		Skwaloo - french translation.\n
 	</string>
 
 	<!-- Preferences -->
