--- a/src/NativeBOINC/res/values-cs/strings.xml
+++ b/src/NativeBOINC/res/values-cs/strings.xml
@@ -143,6 +143,7 @@
 		Daniel Winzen - německý překlad.\n
 		Paolo (bax) - italský překlad.\n
 		uno20001 - maďarský překlad.\n
+		Skwaloo - francouzský překlad.\n
 	</string>
 
 	<!-- Preferences -->
