--- a/src/NativeBOINC/res/raw/changelog.txt
+++ b/src/NativeBOINC/res/raw/changelog.txt
@@ -1,3 +1,6 @@
+Version 0.4.4.2.3 (beta) (2013-08-09):
+- fixed NPE in Manage Client activity
+
 Version 0.4.4.2.2 (beta) (2013-07-12):
 - updated German translations
 - some small fixes for English translation
